--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -58,15 +58,15 @@
 @import './input';
 @import './form';
 
-// Util nav/ toolbar
+// Util nav
 @import './main-nav-toggle';
 @import './util-nav';
 
+// Toolbar
 @import './toolbar';
 
 @import './search';
 @import './filters';
-@import './search-open';
 
 // Drawers
 @import './drawer';
