--- a/app/views/tenon/tenon_content/_fields.html.haml
+++ b/app/views/tenon/tenon_content/_fields.html.haml
@@ -15,7 +15,7 @@
     /   = i('visibility')
     /   %span Edit in Preview Mode
 
-    = link_to '#', class: 'tn-tc-add-content btn btn-fab initial-row', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_clone: 'true', modal_title: 'Add Content', modal_handler: 'Tenon.features.tenonContent.Library' }, title: 'Add Content' do
+    = link_to '#', class: 'tn-tc-add-content btn initial-row', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_clone: 'true', modal_title: 'Add Content', modal_handler: 'Tenon.features.tenonContent.Library' }, title: 'Add Content' do
       = i('add')
 
   .tn-tc-wrap
