--- a/app/views/tenon/assets/_form.html.haml
+++ b/app/views/tenon/assets/_form.html.haml
@@ -3,7 +3,7 @@
     = render 'tenon/shared/breadcrumbs'
     .actions
       - if can?(:publish, @asset)
-        %button.action__btn.btn-flat.btn--primary.submit{ data: { disable_with: "Please wait..." } } Save
+        %button.action__btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
 
       = link_to '#!', class: 'action-icon dropdown-button' , data: { activates: 'form-dropdown'}  do
         = i('more_vert')
