--- a/app/assets/stylesheets/tenon/main-nav.scss
+++ b/app/assets/stylesheets/tenon/main-nav.scss
@@ -4,7 +4,9 @@
   color: $main-nav-fg-color;
 }
 
-.main-nav-open {
+.main-nav-drawer--open {
+  @extend .drawer--open;
+
   #main-nav.drawer {
     left: 0;
   }
