main nav fix: class update to match styleheets

--- a/spec/dummy/app/views/tenon/shared/_main_nav.html.haml
+++ b/spec/dummy/app/views/tenon/shared/_main_nav.html.haml
@@ -1,4 +1,4 @@
-%ul
+%ul.main-nav__list
   = nav_item 'Asset Library', assets_path, 'photo_library'
   = nav_item 'Pages', pages_path, 'description'
   = nav_item 'Posts', posts_path, 'description', active: ['post_categories'].include?(controller_name) do
