post form toolbar and other fixes

--- a/app/assets/stylesheets/tenon/actions.scss
+++ b/app/assets/stylesheets/tenon/actions.scss
@@ -17,7 +17,7 @@ $action-icon-dimension: 44px;
     text-decoration: none;
   }
 
-  i, span {
+  i, a, span {
     @include default-transition;
     display: inline-block;
     position: relative;
@@ -31,7 +31,7 @@ $action-icon-dimension: 44px;
 }
 
 .action-icon--white {
-  color: rgba($white, .8);
+  color: rgba($white, .9);
   &:hover {
     color: rgba($white,1);
   }
