--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -69,7 +69,7 @@
 // Drawers
 @import './drawer';
 @import './app-info';
-@import './main-nav'; // bem: todo
+@import './main-nav';
 @import './filters';
 
 // Records
