--- a/app/assets/stylesheets/tenon/toolbar.scss
+++ b/app/assets/stylesheets/tenon/toolbar.scss
@@ -21,12 +21,28 @@
   line-height: 40px;
 }
 
+.toolbar__btn {
+  @extend %z-depth-0;
+  display: block;
+  margin-top: 2px;
+  background-color: rgba($white, .6);
+  height: 40px;
+  line-height: 40px;
+  color: $white;
+
+  &:hover {
+    @extend %z-depth-1;
+    background-color: rgba($white, 1);
+    color: $btn-primary-bg-color;
+  }
+}
+
 .toolbar__actions {
   padding: 8px 0;
   height: $util-nav-height;
 
   .toolbar__action {
-    width: $action-icon-dimension;
+    padding: 0 10px;
   }
 }
 
