--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -1,24 +1,25 @@
 .drawer-pusher
   = autosaving_form_for @post do |f|
-    .toolbar.toolbar--posts
+    .toolbar
       = render 'tenon/shared/breadcrumbs'
-      .actions
-        - if can?(:publish, @post)
-          .action.action__btn
-            %button.btn.btn--flat.btn--primary.btn--block.submit{ data: { disable_with: "Please wait..." } } Save
+      .toolbar__content
+        .toolbar__actions.toolbar__actions--right
+          - if can?(:publish, @post)
+            .toolbar__action
+              %button.btn.toolbar__btn.submit{ data: { disable_with: "Please wait..." } } Save
 
-        .action.action__icon
-          %a.action-icon.action-icon--white.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
-            = i('more_vert')
+          .toolbar__action
+            %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+              = i('more_vert')
 
-        %ul.dropdown-content#form-dropdown
-          - if can?(:create, Tenon::ItemVersion)
-            = render 'tenon/shared/draft_controls', obj: @post
+          %ul.dropdown-content#form-dropdown
+            - if can?(:create, Tenon::ItemVersion)
+              = render 'tenon/shared/draft_controls', obj: @post
 
-          - if @post.persisted?
-            %li
-              = link_to @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
-                = i('delete')
+            - if @post.persisted?
+              %li
+                = link_to @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
+                  = i('delete')
 
     %main
       = error_messages_for :post
