--- a/app/assets/stylesheets/tenon/util-nav.scss
+++ b/app/assets/stylesheets/tenon/util-nav.scss
@@ -8,6 +8,7 @@
 
 .util-nav__action-icon {
   @include default-transition;
+  @extend %z-depth-1;
   display: inline-block;
   float: left;
   margin-left: 10px;
@@ -20,7 +21,10 @@
   color: $avatar-fg-color;
 
   &:hover {
-    @extend %z-depth-1;
-    color: $avatar-fg-hover-color;
+    @extend %z-depth-2;
+
+    .action-icon {
+      color: $avatar-fg-hover-color;
+    }
   }
 }
