--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -80,7 +80,7 @@
 
 @import './dropdown-content'; // bem: todo
 @import './panel';
-@import './breadcrumbs';  // bem: todo
+@import './breadcrumbs';
 @import './burger';
 @import './flash'; // bem: todo
 @import './hr';
