record icon fix

--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -82,7 +82,7 @@
 @import './panel';
 @import './breadcrumbs';
 @import './burger';
-@import './flash'; // bem: todo
+@import './flash';
 @import './hr';
 @import './pre';
 
