--- a/app/assets/stylesheets/tenon/fab.scss
+++ b/app/assets/stylesheets/tenon/fab.scss
@@ -5,7 +5,7 @@
   @extend %z-depth-2;
   display: inline-block;
   position: relative;
-  z-index: $z-btn-fab;
+  z-index: $z-fab;
   border: none;
   border-radius: 50%;
   background-color: $btn-fab-bg-color;
