--- a/app/assets/stylesheets/tenon/main-nav.scss
+++ b/app/assets/stylesheets/tenon/main-nav.scss
@@ -52,8 +52,9 @@
   }
 
   i {
+    @include font-size($main-nav-icon-size);
     opacity: .6;
-    margin-right: 20px;
+    margin-right: 10px;
   }
 }
 
