--- a/app/assets/stylesheets/tenon/variables/z-index.scss
+++ b/app/assets/stylesheets/tenon/variables/z-index.scss
@@ -6,8 +6,8 @@ $z-layout-drawer: 10;
 $z-layout-util-nav: 200;
 
 // ui:
-$z-kebab-dropdown: 10;
-$z-btn-fab: 10;
+$z-dropdown: 10;
+$z-fab: 10;
 $z-flash-message: 20;
 $z-panel-open: 10;
 $z-filters-active: 60;
