--- a/app/views/tenon/index/index.html.haml
+++ b/app/views/tenon/index/index.html.haml
@@ -3,7 +3,7 @@
     .drawer-pusher
       .toolbar.bg-color-primary
         %ul.breadcrumbs
-          %li
+          %li.breadcrumbs__item
             Dashboard?
             = i 'keyboard_arrow_right'
 
