--- a/app/assets/stylesheets/tenon/record.scss
+++ b/app/assets/stylesheets/tenon/record.scss
@@ -1,5 +1,5 @@
-.record-list {
-}
+// .record-list {
+// }
 
 .record {
   @extend %z-depth-2;
@@ -11,6 +11,7 @@
   padding: ($default-spacing / 2) $default-spacing;
   width: 100%;
   overflow: hidden;
+
   &:hover {
     @extend %z-depth-2;
     opacity: 1;
@@ -70,7 +71,7 @@
 
 .record__expanded-content {
   display: none;
-  padding-top: $default-spacing/3;
+  padding-top: ($default-spacing / 3);
 }
 
 .record__expanded-title {
