update dropdown in other places: react component, dummy post form, asset form

--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -76,7 +76,7 @@
 @import './record';
 
 // Misc
-@import './dropdown-content'; // bem: todo
+@import './dropdown';
 @import './panel';
 @import './breadcrumbs';
 @import './burger';
