--- a/app/assets/stylesheets/tenon/dropdown.scss
+++ b/app/assets/stylesheets/tenon/dropdown.scss
@@ -30,37 +30,11 @@
   line-height: $dropdown-item-height;
   color: $dropdown-fg-color;
   cursor: pointer;
-
-  // &:hover, &.active, &.selected {
-  //   background-color: $dropdown-hover-bg-color;
-  // }
-  //
-  // &.active.selected {
-  //   background-color: darken($dropdown-hover-bg-color, 5%);
-  // }
-
-
-  // & > span > label {
-  //   top: 1px;
-  //   left: 3px;
-  //   height: 18px;
-  // }
-
-  // Icon alignment override
-  // & > a > i {
-  //   @include font-size($dropdown-icon-size);
-  //   display: inline-block;
-  //   margin-right: $default-spacing / 2;
-  //   width: $dropdown-icon-size * 1px;
-  //   overflow: hidden;
-  //   vertical-align: middle;
-  //   text-align: center;
-  // }
 }
 
-
 .dropdown__item--label {
-  padding: 0 $default-spacing / 2;
+  border-bottom: 1px solid lighten($light-border-color, 10%);
+  padding: 0 ($default-spacing / 2);
   color: lighten($dropdown-fg-color, 10%);
 }
 
