--- a/app/views/tenon/assets/_form.html.haml
+++ b/app/views/tenon/assets/_form.html.haml
@@ -1,28 +1,32 @@
-= form_for Tenon::Asset.new, format: 'json', builder: Tenon::FormBuilder do |f|
-  .toolbar.bg-color-primary-dk10
-    = render 'tenon/shared/breadcrumbs'
-    .actions
-      - if can?(:publish, @asset)
-        %button.action__btn.btn-flat.submit{ data: { disable_with: "Please wait..." } } Save
+.drawer-pusher
+  = form_for Tenon::Asset.new, format: 'json', builder: Tenon::FormBuilder do |f|
+    .toolbar
+      = render 'tenon/shared/breadcrumbs'
+      .toolbar__content
+        .toolbar__actions.toolbar__actions--right
+          - if can?(:publish, @asset)
+            %button.btn.toolbar__btn.submit{ data: { disable_with: "Please wait..." } } Save
 
-      = link_to '#!', class: 'action-icon dropdown-button' , data: { activates: 'form-dropdown'}  do
-        = i('more_vert')
+          .toolbar__action
+            %a.action-icon.dropdown-button{ href: '#!', data: { activates: 'form-dropdown'} }
+              = i('more_vert')
 
-      %ul.dropdown-content#form-dropdown
-        - if @asset.persisted?
-          %li
-            = link_to @asset, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'delete-link' do
-              = i('delete')
+        %ul.dropdown#form-dropdown
+          - if @asset.persisted?
+            %li.dropdown__item
+              = link_to @asset, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'dropdown__action action-icon delete-link' do
+                = i('delete')
+                %span Delete
 
-  %main
-    = error_messages_for :asset
+    %main
+      = error_messages_for :asset
 
-    = f.text_field :title, class: 'form-title-field', explanation: "Enter a title for your asset.  You can leave this blank to just use the file name as the title. #{defined?(multiple) ? 'If you upload multiple assets a numerical series will be created.' : '' }"
+      = f.text_field :title, class: 'form-title-field', explanation: "Enter a title for your asset.  You can leave this blank to just use the file name as the title. #{defined?(multiple) ? 'If you upload multiple assets a numerical series will be created.' : '' }"
 
-    .panel--block
-      .browse-button-holder
-        .fileupload.btn.btn-secondary.browse
-          %span#choose-files= defined?(multiple) ? 'Choose Files' : 'Choose File'
-          %input{ type: 'file', class: 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
+      .panel--block
+        .browse-button-holder
+          .fileupload.btn.btn-secondary.browse
+            %span#choose-files= defined?(multiple) ? 'Choose Files' : 'Choose File'
+            %input{ type: 'file', class: 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
 
-    .spacer
+      .spacer
