--- a/app/views/tenon/fields/_password_field.html.haml
+++ b/app/views/tenon/fields/_password_field.html.haml
@@ -1,2 +1,2 @@
 = render layout: 'tenon/fields/base', locals: { f: f, method_name: method_name, opts: opts } do
-  = f.super_password_field method_name, opts
+  = f.super_password_field method_name, opts.merge(class: 'input-block__text-field')
