--- a/app/views/tenon/fields/_check_box.html.haml
+++ b/app/views/tenon/fields/_check_box.html.haml
@@ -1,2 +1,2 @@
 = render layout: 'tenon/fields/base', locals: { f: f, method_name: method_name, opts: opts } do
-  = f.super_check_box method_name, opts
+  = f.super_check_box method_name, opts.merge(class: 'input-block__check-box')
