--- a/app/views/tenon/fields/_radio_button.html.haml
+++ b/app/views/tenon/fields/_radio_button.html.haml
@@ -1,2 +1,2 @@
 = render layout: 'tenon/fields/base', locals: { f: f, method_name: method_name, opts: opts } do
-  = f.super_radio_button method_name, opts
+  = f.super_radio_button method_name, opts.merge(class: 'input-block__radio-button')
