toolbar fixes for index and styleguide

--- a/app/views/tenon/styleguides/index.html.haml
+++ b/app/views/tenon/styleguides/index.html.haml
@@ -1,4 +1,10 @@
 .drawer-pusher
+  .toolbar
+    %ul.breadcrumbs
+      %li.breadcrumbs__item
+        Styleguide
+
+
   %main#styleguide
     %section.styleguide-index
       %h1 Tenon Styleguide
