--- a/app/views/tenon/fields/_base.html.haml
+++ b/app/views/tenon/fields/_base.html.haml
@@ -1,5 +1,5 @@
 .input-block
-  = f.label method_name, opts[:label], opts[:required], class: 'input-block__label'
+  = f.label method_name, opts[:label], opts[:required]
 
   = yield
 
