--- a/app/views/tenon/styleguides/forms/_outside.html.haml
+++ b/app/views/tenon/styleguides/forms/_outside.html.haml
@@ -5,5 +5,6 @@
     Form elements are generally confined to a panel div (.panel--block). Here
     are all the form elements that can live outside of a panel.
 
-  = f.text_field :text, class: 'form-title-field', placeholder: 'A sample title field'
-  %code f.text_field :text, class: 'form-title-field', placeholder: 'A sample title field'
+  = f.title_text_field :text, placeholder: 'A sample title field'
+
+  %code f.title_text_field :text, class: 'form-title-field', placeholder: 'A sample title field'
