--- a/app/assets/stylesheets/tenon/panel.scss
+++ b/app/assets/stylesheets/tenon/panel.scss
@@ -6,7 +6,13 @@
 }
 
 .panel--block {
-  @extend .panel;
   margin-bottom: $default-spacing;
   padding: ($default-spacing / 2) $default-spacing;
+}
+
+.panel-label {
+  @extend %font-smallest;
+  display: block;
+  margin-bottom: $default-spacing / 3;
+  line-height: $body-line-height;
 }
