--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -22,11 +22,11 @@
                 = link_to @post, data: { method: :delete, confirm: 'Are you sure you want to delete this?' }, class: 'dropdown__action action-icon delete-link' do
                   = i('delete')
                   %span Delete
-                  
+
     %main
       = error_messages_for :post
 
-      = f.text_field :title, required: true, class: 'form-title-field'
+      = f.title_text_field :title, required: true
 
       .form-label Content
       .panel.panel--block
