--- a/spec/dummy/app/views/tenon/posts/_form.html.haml
+++ b/spec/dummy/app/views/tenon/posts/_form.html.haml
@@ -28,12 +28,12 @@
 
       = f.title_text_field :title, required: true
 
-      .form-label Content
+      .panel-label Content
       .panel.panel--block
         = f.rich_text :excerpt, label: ''
         = f.tenon_content :content
 
-      .form-label Publication Details
+      .panel-label Publication Details
       .panel.panel--block
         - unless @categories.blank?
           = f.select :post_category_ids, @categories.map { |c| [c.title, c.id] }, { label: 'Categories' }, { multiple: true }
